RESOLVED FIXED308237
[LBSE] Fix imported/w3c/web-platform-tests/svg/types/scripted/SVGGraphicsElement.getBBox-03.html
https://bugs.webkit.org/show_bug.cgi?id=308237
Summary [LBSE] Fix imported/w3c/web-platform-tests/svg/types/scripted/SVGGraphicsElem...
Rob Buis
Reported 2026-02-19 12:04:14 PST
Fix imported/w3c/web-platform-tests/svg/types/scripted/SVGGraphicsElement.getBBox-03.html.
Attachments
Rob Buis
Comment 1 2026-02-19 12:20:31 PST
EWS
Comment 2 2026-02-20 06:00:13 PST
Committed 307910@main (1bac38361f57): <https://commits.webkit.org/307910@main> Reviewed commits have been landed. Closing PR #59019 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-20 06:01:13 PST
Note You need to log in before you can comment on or make changes to this bug.