[LBSE] Fix imported/w3c/web-platform-tests/svg/types/scripted/SVGGraphicsElement.getBBox-03.html https://bugs.webkit.org/show_bug.cgi?id=308237

Reviewed by Nikolas Zimmermann.

Fix imported/w3c/web-platform-tests/svg/types/scripted/SVGGraphicsElement.getBBox-03.html by properly
treating negative values for rect and foreignObject width/height, radii in ellipse/circle object
bounding boxes and thus the getBBox method returned rectangle.

* LayoutTests/platform/mac-tahoe-wk2-lbse-text/TestExpectations:
* LayoutTests/platform/mac-tahoe-wk2-lbse-text/imported/w3c/web-platform-tests/svg/types/scripted/SVGGraphicsElement.getBBox-03-expected.txt: Added.
* Source/WebCore/rendering/svg/RenderSVGEllipse.cpp:
(WebCore::RenderSVGEllipse::updateShapeFromElement):
* Source/WebCore/rendering/svg/RenderSVGForeignObject.cpp:
(WebCore::RenderSVGForeignObject::layout):
* Source/WebCore/rendering/svg/RenderSVGRect.cpp:
(WebCore::RenderSVGRect::updateShapeFromElement):

Canonical link: https://commits.webkit.org/307910@main